# AEVCJAdQinrtiyHojUopCfaXjaJtYlCB

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  frontend.py  ingest.py  main.py  models.py
app/db/: db.py  schema.sql
app/llm/: client.py  prompts.py  query_router.py
app/tests/: test_db.py  test_ingest.py  test_llm.py  test_main.py
