[project]
name = "AEVCJAdQinrtiyHojUopCfaXjaJtYlCB"
version = "0.1.0"
description = "Conversational AI movie agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlparse>=0.5.5",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
